feat(1.4.0-beta1): 初步完成重试组件全流程设计